final result of docker